# ecommerce-django-template

./: .env.example  README.md  setup.sh
backend/: mypy.ini  pyproject.toml  seed.py
backend/config/: settings.py  urls.py
backend/shops/: admin.py  models.py
backend/shops/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  schemas.py  views.py
backend/users/migrations/: 0001_initial.py
docker-files/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  init.sql  nginx.conf
