[tool.poetry]
name = "ecommerce-backend"
version = "0.1.0"
description = ""
authors = ["Brian Tzu-Pin Ho <k333hoisi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.9"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.9"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.2"
mypy = "^1.10.0"
pydantic = {extras = ["mypy"], version = "^2.7.1"}
django-stubs = "^5.0.0"

[tool.mypy]
plugins = ["pydantic.mypy", "mypy_django_plugin.main"]

[mypy.plugins.django-stubs]
django_settings_module = "config.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

